<resources>
    <string name="app_name">Sistemadechamada</string>

        <string name="btn_9">9</string>
        <string name="btn_8">8</string>
        <string name="btn_7">7</string>
        <string name="btn_6">6</string>
        <string name="btn_asterisco">*</string>
        <string name="btn_5">5</string>
        <string name="btn_4">4</string>
        <string name="btn_jdv">#</string>
        <string name="btn_3">3</string>
        <string name="btn_2">2</string>
        <string name="btn_1">1</string>
        <string name="btn_senha">senha</string>
        <string name="btn_senha2">confirme sua senha</string>
        <string name="btn_zero">0</string>


        <string name="btn_entrar">entrar</string>
        <string name="btn_clear">limpar</string>








</resources>
